cros: Fix browser header wrongly drawn frame image

Changes:
Check the code before https://codereview.chromium.org/2770943002, found that when frame_overlay_image_.isNull(), TileImageInt should be called.

BUG=704636
TEST=test that bug doesn't happen with theme installed

Review-Url: https://codereview.chromium.org/2770943004
Cr-Commit-Position: refs/heads/master@{#460265}

Former-commit-id: b30c149bc6b38870ca74cb8dcd5fb34e90e75480